--- a/website/index.html
+++ b/website/index.html
@@ -5,7 +5,6 @@
 <title>Weather Journal</title>
 <link href="https://fonts.googleapis.com/css?family=Oswald:400,600,700|Ranga:400,700&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="style.css">
-<script src="app.js" defer></script>
 </head>
 
 <body>
@@ -38,6 +37,6 @@
             </div>
      </div>
 </div>
-
+<script src="app.js"></script>
 </body>
 </html>
